<resources>
    <string name="app_name">SpaceDim</string>
    <string name="play_again">Rejouer</string>
    <string name="back_to_home_page">Retour au menu principal</string>
    <string name="ready_button">Je suis prêt !</string>
    <string name="waiting_room">Salle d\'attente</string>
    <string name="level_finish">Tu as atteins le niveau</string>
    <string name="win">GAGNÉ !</string>
    <string name="loose">PERDU !</string>
    <string name="user_score">Score :</string>
    <string name="login_label">Connecte-toi avec ton pseudo pour accéder à SpaceDim :</string>
    <string name="username">Pseudo</string>
    <string name="login_title">Connexion</string>
    <string name="cancel">Annuler</string>
    <string name="ok">OK</string>
    <string name="user_registered">Le\ joueur %1$s a bien été créé !</string>
    <string name="error_register">Une erreur est survenue durant l\'inscription. Veuillez réessayer.</string>
    <string name="launch_game">Jouer !</string>
    <string name="login">Connexion</string>
    <string name="game_launch_explain">Saisis ton pseudo pour lancer une partie</string>
    <string name="user_not_exist">Ce joueur n\'existe pas, inscrivez vous avant de lancer une partie</string>
    <string name="room_selection_label">Saisis le nom de la partie à rejoindre :</string>
    <string name="room_name">Nom de la partie</string>
    <string name="room_selection_title">Choix de la partie</string>
    <string name="score"> Score </string>
    <string name="waiting_for_server">En attente du serveur…</string>
    <string name="seconds_left">secondes restantes</string>
    <string name="id_key">USER_ID</string>
    <string name="username_key">USER_NAME</string>
    <string name="login_tip_register">Pas d\'inquiétude, si ton pseudo n\'existe pas, il sera créé !</string>
    <string name="user_best_score">Top 5 mondial</string>
    <string name="score_list">Top 5</string>
</resources>
